ergonomic array support in parameters and README